--- a/pages/work/dev-protocol.mdx
+++ b/pages/work/dev-protocol.mdx
@@ -1,14 +1,13 @@
-import DefaultLayout from "../../layouts/DefaultLayout";
-
-import { MSAnimatedSection, MSButton, MSTag, MSTitleBar } from "../../components";
+import { MSAnimatedSection, MSButton, MSTitleBar } from "../../components";
 import {
-  ArrowLeftIcon,
   PhotoIcon,
   QuestionMarkCircleIcon
 } from "@heroicons/react/24/outline";
 import { SiGithub } from "@icons-pack/react-simple-icons";
 import PreviewImage from "../../components/markdown/PreviewImage";
 import { works } from "../../constants/works";
+import Info from "../../components/markdown/Info";
+import MarkdownLayout from "../../layouts/MarkdownLayout";
 
 export const metadata = {
   title: 'Dev Protocol',
@@ -17,36 +16,15 @@ export const metadata = {
 
 export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
-<MSAnimatedSection>
-  # { metadata.title }
-</MSAnimatedSection>
-<MSAnimatedSection delay={0.3}>
-  ### { metadata.description }
-</MSAnimatedSection>
-
-<MSAnimatedSection delay={0.4}>
-  <div className="w-full h-full max-h-md r-lg my-md" style={{ overflow: 'hidden'}}>
-    <PreviewImage src="/img/devprotocol.webp" alt="Dev Protocol's landing page." />
-  </div>
-
-  Dev Protocol is a solution for sustainability issues of creators activities, it is designed for the blockchain solution and enhance creators to grow their economy. During my time with the company we've made a lot of significant improvements with how they handle user interfaces. It gave birth to their design system, [Hashi](/tools/hashi). With its implementation, the new unified design language now spans across multiple products in the ecosystem. It also laid the foundation for their numerous products including [Niwa](https://niwa.xyz), [Clubs](https://clubs.place), and their main website.
-</MSAnimatedSection>
+Dev Protocol is a solution for sustainability issues of creators activities, it is designed for the blockchain solution and enhance creators to grow their economy. During my time with the company we've made a lot of significant improvements with how they handle user interfaces. It gave birth to their design system, [Hashi](/tools/hashi). With its implementation, the new unified design language now spans across multiple products in the ecosystem. It also laid the foundation for their numerous products including [Niwa](https://niwa.xyz), [Clubs](https://clubs.place), and their main website.
 
 <MSAnimatedSection className="grid cols-1 @large:cols-3 gap-md mt-4xl">
   <MSAnimatedSection>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
-    <div className="w-full start-1 end-1 fill-surface-400 ink-surface-ink p-lg r-md raise-low mt-md" style={{ height: 'max-content' }}>
-      <ul className="ms-list mb-md">
-        <li className="ms-list__item">Client: **FRAME00**</li>
-        <li className="ms-list__item">Status: **{ WorkInfo.status }**</li>
-        <li className="ms-list__item mt-sm">{ WorkInfo.tags.map((item, i) => <MSTag key={ i } label={ item }/>) }</li>
-      </ul>
-      #### Links
-      <div className="flex flow-row flow-nowrap jc-start gap-sm mt-sm">
-        <MSButton link="https://devprotocol.xyz" type="small filled">Website</MSButton>
-        <MSButton link="https://github.com/dev-protocol" type="small filled" icon={['left', <SiGithub />]}>GitHub</MSButton>
-      </div>
-    </div>
+    <Info data={ WorkInfo }>
+      <MSButton link="https://devprotocol.xyz" type="small filled">Website</MSButton>
+      <MSButton link="https://github.com/dev-protocol" type="small filled" icon={['left', <SiGithub />]}>GitHub</MSButton>
+    </Info>
   </MSAnimatedSection>
   <MSAnimatedSection delay={0.3} className="start-1 end-1 @large:start-2 @large:end-4">
     <MSTitleBar clsssName="jc-center" icon={<PhotoIcon />}>Media</MSTitleBar>
@@ -61,11 +39,13 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
 export default function WorkPage({ children }) {
   return (
-    <DefaultLayout title={metadata.title} description={metadata.description} previewImage="/img/devprotocol.webp">
-      <section className="py-4xl">
-        <MSButton style={{ position: 'relative', left: '-0.9rem', marginBottom: '0.7rem' }} link="/work" type="small" icon={['left', <ArrowLeftIcon />]}>Back to all work</MSButton>
-        {children}
-      </section>
-    </DefaultLayout>
+    <MarkdownLayout
+      metadata={ metadata }
+      data={ WorkInfo }
+      previewImage="devprotocol.webp"
+      previewImageAlt="Dev Protocol's landing page."
+    >
+      { children }
+    </MarkdownLayout>
   );
 }
