--- a/pages/work/pycord.mdx
+++ b/pages/work/pycord.mdx
@@ -1,14 +1,13 @@
-import DefaultLayout from "../../layouts/DefaultLayout";
-
-import { MSAnimatedSection, MSButton, MSTag, MSTitleBar } from "../../components";
+import { MSAnimatedSection, MSButton, MSTitleBar } from "../../components";
 import {
-  ArrowLeftIcon,
   PhotoIcon,
   QuestionMarkCircleIcon
 } from "@heroicons/react/24/outline";
 import { SiGithub } from "@icons-pack/react-simple-icons";
 import PreviewImage from "../../components/markdown/PreviewImage";
 import { works } from "../../constants/works";
+import Info from "../../components/markdown/Info";
+import MarkdownLayout from "../../layouts/MarkdownLayout";
 
 export const metadata = {
   title: 'Pycord',
@@ -17,36 +16,15 @@ export const metadata = {
 
 export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
-<MSAnimatedSection>
-  # { metadata.title }
-</MSAnimatedSection>
-<MSAnimatedSection delay={0.3}>
-  ### { metadata.description }
-</MSAnimatedSection>
-
-<MSAnimatedSection delay={0.4}>
-  <div className="w-full h-full max-h-md r-lg my-md" style={{ overflow: 'hidden'}}>
-    <PreviewImage src="/img/pycord.webp" alt="Pycord's landing page." />
-  </div>
-
-  Pycord is a modern Discord bot framework built in Python. The goal is to make an intuitive interface, one that is simple to use without compromising  the features. The library is maintained by the core team, with the support of the community. New features are added regularly to keep up with the ever-changing Discord API. Apart from developing the website, I've also built the [guide](https://guide.pycord.dev/) website, it is now maintained by the core team.
-</MSAnimatedSection>
+Pycord is a modern Discord bot framework built in Python. The goal is to make an intuitive interface, one that is simple to use without compromising  the features. The library is maintained by the core team, with the support of the community. New features are added regularly to keep up with the ever-changing Discord API. Apart from developing the website, I've also built the [guide](https://guide.pycord.dev/) website, it is now maintained by the core team.
 
 <MSAnimatedSection className="grid cols-1 @large:cols-3 gap-md mt-4xl">
   <MSAnimatedSection>
     <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
-    <div className="w-full start-1 end-1 fill-surface-400 ink-surface-ink p-lg r-md raise-low mt-md" style={{ height: 'max-content' }}>
-      <ul className="ms-list mb-md">
-        <li className="ms-list__item">Client: **Pycord Development**</li>
-        <li className="ms-list__item">Status: **{ WorkInfo.status }**</li>
-        <li className="ms-list__item mt-sm">{ WorkInfo.tags.map((item, i) => <MSTag key={ i } label={ item }/>) }</li>
-      </ul>
-      #### Links
-      <div className="flex flow-row flow-nowrap jc-start gap-sm mt-sm">
-        <MSButton link="https://pycord.dev" type="small filled">Website</MSButton>
-        <MSButton link="https://github.com/Pycord-Development" type="small filled" icon={['left', <SiGithub />]}>Source</MSButton>
-      </div>
-    </div>
+    <Info data={ WorkInfo }>
+      <MSButton link="https://pycord.dev" type="small filled">Website</MSButton>
+      <MSButton link="https://github.com/Pycord-Development" type="small filled" icon={['left', <SiGithub />]}>Source</MSButton>
+    </Info>
   </MSAnimatedSection>
   <MSAnimatedSection delay={0.3} className="start-1 end-1 @large:start-2 @large:end-4">
     <MSTitleBar clsssName="jc-center" icon={<PhotoIcon />}>Media</MSTitleBar>
@@ -58,11 +36,8 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
 export default function WorkPage({ children }) {
   return (
-    <DefaultLayout title={metadata.title} description={metadata.description} previewImage="/img/pycord.webp">
-      <section className="py-4xl">
-        <MSButton style={{ position: 'relative', left: '-0.9rem', marginBottom: '0.7rem' }} link="/work" type="small" icon={['left', <ArrowLeftIcon />]}>Back to all work</MSButton>
-        {children}
-      </section>
-    </DefaultLayout>
+    <MarkdownLayout data={ WorkInfo } metadata={ metadata } previewImage="pycord.webp" previewImageAlt="Pycord's landing page.">
+      { children }
+    </MarkdownLayout>
   );
 }
