Update wearecoral content

--- a/pages/work/wearecoral.mdx
+++ b/pages/work/wearecoral.mdx
@@ -3,7 +3,6 @@ import {
   PhotoIcon,
   QuestionMarkCircleIcon
 } from "@heroicons/react/24/outline";
-import { SiGithub } from "@icons-pack/react-simple-icons";
 import PreviewImage from "../../components/markdown/PreviewImage";
 import { works } from "../../constants/works";
 import Info from "../../components/markdown/Info";
@@ -20,6 +19,8 @@ Coral is an innovative crowdfunding platform dedicated to nurturing the musician
 
 ### What did I do?
 I designed and implemented the conversion pages. The experience was carefully crafted, so it takes the users on a journey from the surface to the thriving ecosystem of corals below. The pages were designed to be responsive, accessible, beautiful, and delightful to use.
+
+I've also made improvements to the onboarding flows, modal UIs, and overall platform experience.
 
 <MSAnimatedSection className="grid cols-1 @large:cols-3 gap-md mt-4xl">
   <MSAnimatedSection>
